# cyclicityanalysis

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: example.ipynb
docs/.ipynb_checkpoints/: example-checkpoint.ipynb
docs/data/stocks/: BAC.csv  BBVA.csv  BCS.csv  BMO.csv  BNPQY.csv  BNS.csv  C.csv  GS.csv  HDB.csv  HSBC.csv  IBKR.csv  IBN.csv  ING.csv  ISNPY.csv  JPM.csv  MBFJF.csv  MS.csv  MUFG.csv  NWG.csv  PNC.csv  RY.csv  SCHW.csv  SMFG.csv  TD.csv  TFC.csv  UBS.csv  UNCRY.csv  USB.csv  WFC.csv
docs/data/stocks/accumulatedorientedareas/: GS_HDB.csv  IBKR_GS.csv  IBKR_HDB.csv  MS_GS.csv  MS_HDB.csv  MS_IBKR.csv  UBS_BAC.csv  UBS_BBVA.csv  UBS_BCS.csv  UBS_BMO.csv  UBS_BNPQY.csv  UBS_BNS.csv  UBS_C.csv  UBS_GS.csv  UBS_HDB.csv  UBS_HSBC.csv  UBS_IBKR.csv  UBS_IBN.csv  UBS_ING.csv  UBS_ISNPY.csv  UBS_JPM.csv  UBS_MBFJF.csv  UBS_MS.csv  UBS_MUFG.csv  UBS_NWG.csv  UBS_PNC.csv  UBS_RY.csv  UBS_SCHW.csv  UBS_SMFG.csv  UBS_TD.csv  UBS_TFC.csv  UBS_UNCRY.csv  UBS_USB.csv  UBS_WFC.csv
src/cyclicityanalysis/: coom.py  orientedarea.py
src/cyclicityanalysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_orientedarea.py
