[build-system]
requires = ["setuptools",'wheel']
build-backend = "setuptools.build_meta"

[project]
name = "cyclicityanalysis"
authors = [
    {name = "Vivek Kaushik", email = "vskaush2@illinois.edu"},
]
version = "1.0.0"
description = "Performs Cyclicity Analysis on A Collection of Time-Series"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ['numpy','pandas']


[project.optional-dependencies]
optional_dependencies = ['pytest','jupyter','requests','scipy']